--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,16 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "~2.*",
+    "bootstrap": "~3.*",
+    "AdminLTE": "admin-lte#~2.*",
+    "angular": "~1.*",
+    "angular-route": "~1.*",
+    "font-awesome": "^4.5.0",
+    "requirejs": "^2.1.22",
+    "angular-ui": "^0.4.0",
+    "angular-ui-bootstrap": "^1.1.2"
+  }
 }
